--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,4 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
   "icons": [
     {
       "src": "favicon.ico",
@@ -18,8 +16,12 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "name": "portfolio",
+  "short_name": "ym",
+  "theme_color": "#010c15",
+  "background_color": "#dcedc8",
+  "display": "fullscreen",
+  "scope": "/",
+  "start_url": "/",
+  "prefer_related_applications": true
 }
